# models/clustertokens_token_status.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ClustertokensTokenStatus clustertokens token status
+//
+// swagger:model clustertokens.TokenStatus
+type ClustertokensTokenStatus struct {
+
+	// The last time at which this token was used to connect.
+	LastConnectedAt string `json:"lastConnectedAt,omitempty"`
+
+	// The last IP address from which this token connected.
+	LastConnectedIP string `json:"lastConnectedIP,omitempty"`
+}
+
+// Validate validates this clustertokens token status
+func (m *ClustertokensTokenStatus) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this clustertokens token status based on context it is used
+func (m *ClustertokensTokenStatus) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ClustertokensTokenStatus) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ClustertokensTokenStatus) UnmarshalBinary(b []byte) error {
+	var res ClustertokensTokenStatus
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
